Fix use of internal class
Fix for JERSEY-2836